// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PromptFollowUpsEdit rendering tests PromptFollowUpsEdit - empty array - rendered test 1`] = `
<div>
  <section
    class="space-y-4"
    data-testid="follow-up-prompts-edit"
  >
    <div>
      <h3
        class="text-lg font-semibold text-slate-900 flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-message-square-plus h-5 w-5 text-indigo-600"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
          />
          <path
            d="M12 8v6"
          />
          <path
            d="M9 11h6"
          />
        </svg>
        Folge-Prompts
      </h3>
      <p
        class="text-sm text-slate-500 mt-1"
      >
        Vorgeschlagene Prompts, die du als nächste stellen könntest.
      </p>
    </div>
    <div
      class="space-y-4"
    >
      <div
        class="grid gap-2"
        data-slot="form-item"
        data-testid="follow-up-prompt-edit"
      >
        <div
          class="flex gap-2 items-start"
        >
          <textarea
            aria-describedby="_r_0_-form-item-description"
            aria-invalid="false"
            class="flex w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 flex-1"
            data-slot="form-control"
            id="_r_0_-form-item"
            name="followUpPrompts.0"
            placeholder="Folge-Prompt eingeben"
            style="min-height: 66px; max-height: 9007199254740991px; height: 6px;"
          />
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs dark:bg-input/30 dark:border-input dark:hover:bg-input/50 size-9 shrink-0 hover:bg-red-50 hover:text-red-600 hover:border-red-300"
            data-slot="button"
            data-testid="remove-btn"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-x h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 6 6 18"
              />
              <path
                d="m6 6 12 12"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex justify-end"
    >
      <button
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5"
        data-slot="button"
        data-testid="add-btn"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Hinzufügen
      </button>
    </div>
  </section>
</div>
`;

exports[`PromptFollowUpsEdit rendering tests PromptFollowUpsEdit - with prompts - rendered test 1`] = `
<div>
  <section
    class="space-y-4"
    data-testid="follow-up-prompts-edit"
  >
    <div>
      <h3
        class="text-lg font-semibold text-slate-900 flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-message-square-plus h-5 w-5 text-indigo-600"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
          />
          <path
            d="M12 8v6"
          />
          <path
            d="M9 11h6"
          />
        </svg>
        Folge-Prompts
      </h3>
      <p
        class="text-sm text-slate-500 mt-1"
      >
        Vorgeschlagene Prompts, die du als nächste stellen könntest.
      </p>
    </div>
    <div
      class="space-y-4"
    >
      <div
        class="grid gap-2"
        data-slot="form-item"
        data-testid="follow-up-prompt-edit"
      >
        <div
          class="flex gap-2 items-start"
        >
          <textarea
            aria-describedby="_r_1_-form-item-description"
            aria-invalid="false"
            class="flex w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 flex-1"
            data-slot="form-control"
            id="_r_1_-form-item"
            name="followUpPrompts.0"
            placeholder="Folge-Prompt eingeben"
            style="min-height: 66px; max-height: 9007199254740991px; height: 6px;"
          >
            Prompt 1
          </textarea>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs dark:bg-input/30 dark:border-input dark:hover:bg-input/50 size-9 shrink-0 hover:bg-red-50 hover:text-red-600 hover:border-red-300"
            data-slot="button"
            data-testid="remove-btn"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-x h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 6 6 18"
              />
              <path
                d="m6 6 12 12"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="grid gap-2"
        data-slot="form-item"
        data-testid="follow-up-prompt-edit"
      >
        <div
          class="flex gap-2 items-start"
        >
          <textarea
            aria-describedby="_r_2_-form-item-description"
            aria-invalid="false"
            class="flex w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 flex-1"
            data-slot="form-control"
            id="_r_2_-form-item"
            name="followUpPrompts.1"
            placeholder="Folge-Prompt eingeben"
            style="min-height: 66px; max-height: 9007199254740991px; height: 6px;"
          >
            Prompt 2
          </textarea>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs dark:bg-input/30 dark:border-input dark:hover:bg-input/50 size-9 shrink-0 hover:bg-red-50 hover:text-red-600 hover:border-red-300"
            data-slot="button"
            data-testid="remove-btn"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-x h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 6 6 18"
              />
              <path
                d="m6 6 12 12"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex justify-end"
    >
      <button
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5"
        data-slot="button"
        data-testid="add-btn"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Hinzufügen
      </button>
    </div>
  </section>
</div>
`;
